# KernelRepairResearch

./: .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
scripts/: rca_1_1.py  spider.py
stage_1/: run.py  stat.py
vuln/001306cd9c92ce0df23f/: config.yaml  patch.diff  report.txt
vuln/001516d86dbe88862cec/: config.yaml  patch.diff
vuln/0025447b4cb6f208558f/: config.yaml
vuln/002e636502bc4b64eb5c/: config.yaml  patch.diff
vuln/0039110f932d438130f9/: config.yaml  report.txt
vuln/003c0a286b9af5412510/: config.yaml  patch.diff
vuln/0044b22d177870ee974f/: config.yaml  patch.diff
vuln/0049bebbf3042dbd2e8f/: config.yaml
vuln/004c1e0fced2b4bc3dcc/: config.yaml  report.txt
vuln/0055e43d6f67fb9b8ba1/: config.yaml
vuln/0058f72ff908dfa2dbf5/: config.yaml  patch.diff  report.txt
vuln/005ef9aa519f30d97657/: config.yaml  patch.diff  report.txt
vuln/00644eb66b865d7db7f0/: config.yaml  patch.diff  report.txt
vuln/009f546aa1370056b1c2/: config.yaml  patch.diff
vuln/00a3779539a23cbee38c/: config.yaml  patch.diff  report.txt
vuln/00be5da1d75f1cc95f6b/: config.yaml  patch.diff
vuln/00c18ee8497dd3be6ade/: config.yaml  patch.diff
vuln/00cd27751f78817f167b/: config.yaml  patch.diff  report.txt
vuln/00ce7332120071df39b1/: config.yaml
vuln/00d13e505ef530a45100/: config.yaml  patch.diff  report.txt
vuln/00f7f5b884b117ee6773/: config.yaml  patch.diff  report.txt
vuln/011218db4fea20179df3/: config.yaml  report.txt
vuln/011e4ea1da6692cf881c/: config.yaml  patch.diff  report.txt
(+10854 files in other folders)
