[project]
name = "KernelRepairResearch"
version = "1.0.0"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.2",
    "isort>=6.0.1",
    "ipdb>=0.13.13",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
]

[tool.black]
line-length = 179

[tool.isort]
profile = "black"
line_length = 179

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
